# xncml

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/source/: index.md  tutorial.ipynb  variable.md
tests/: test_parser.py
xncml/: parser.py
