[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xncml"
description = "Tools for manipulating and opening NCML (NetCDF Markup) files with/for xarray"
authors = [
  {name = "Anderson Banihirwe", email = "abanihi@ucar.edu"}
]
maintainers = [
  {name = "Anderson Banihirwe", email = "abanihi@ucar.edu"}
]
url=  'https://github.com/xarray-contrib/xncml',
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["version"]
requires-python = ">=3.9"
keywords = ["netcdf", "climate", "climate-indices", "climate-indicators", "xarray"]
dependencies = [
  "numpy>=1.16",
  "xarray>=2022.6",
  "xclim>=0.45, <=0.47",
  "cf_xarray>=0.7.4",
  "cftime>=1.4.1",
  "dask[array]",
  "netCDF4>=1.5.7",
  "psutil",
  "zarr",
  "rechunker>=0.3, !=0.4",
  "fsspec",
  "pandas>=1.3",
  "dateparser",
  "pint",
  "jinja2",
  "psutil"
]




long_description=long_description,

packages=find_packages(),
package_dir={'xncml': 'xncml'},
include_package_data=True,
install_requires=install_requires,
license='Apache 2.0',
zip_safe=False,
keywords='xncml, xarray, netcdf',
use_scm_version=True,
python_requires='>=3.9, <4',
setup_requires=['setuptools_scm', 'setuptools>=30.3.0', 'setuptools_scm_git_archive'],
extras_require={
    'dev': ['pytest', 'flake8'],
},